--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,10 @@
     <div class="error"> {{error}} </div>
     <input type="submit">
 </form>
+    <label>
+        <div> Don't have an account? </div><a href="/signup">Create one! </a>
+    </label>
+
 
 
 {% endblock %}
